# Local-Axeane-Automation

./: .gitignore  BUILD.md  README.md
axeane-automation-runner/: Cargo.toml  README.md  main.rs  tauri.conf.json
axeane-automation-runner/binaries/: PLACEHOLDER.md  README.md
axeane-automation-runner/capabilities/: default.json
axeane-automation-runner/examples/: webview_frontend.rs
axeane-automation-runner/icons/: README.md
axeane-automation-runner/installer/: axeane.wxs  build.ps1
axeane-automation-runner/src/: config.rs  error.rs  lib.rs  main.rs  setup.rs  sidecar.rs
axeane-automation-runner/src/launcher/: backend.rs  browser.rs  frontend.rs  health.rs  mod.rs
axeane-filler/: .env.example  DOM_SELECTORS.md  SELECTOR_UPDATE.md  config.py  main.py  requirements.txt
axeane-filler/models/: formula.py  invoice.py
axeane-filler/routers/: automation.py  extraction.py  formulas.py
axeane-filler/services/: csv_importer.py  formula_engine.py  llm_client.py  pdf_extractor.py  pwa_filler.py
axeane-filler/storage/: __init__.py  formulas_store.py
frontend/: .env.example  README.md  metadata.json  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/automation/: page.tsx
frontend/app/extraction/: page.tsx
frontend/app/formulas/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AppLayout.tsx  Sidebar.tsx  ToastContainer.tsx  ToastProvider.tsx  TopNav.tsx
frontend/lib/: api.ts  context.tsx  toast.ts
tools/: axeane-filler.spec  build_frontend.ps1  build_python_sidecar.ps1  install_service.ps1  make_placeholder_icons.ps1  mock_service.py
tools/sidecar_stub/: Cargo.toml
tools/sidecar_stub/src/: main.rs
