[package] 
name = "axeane-automation-runner" 
version = "1.0.0" 
edition = "2021" 
description = "Axeane Kompta Automation - self-contained launcher" 
authors = ["Axeane"] 
 
[[bin]] 
name = "axeane-automation" 
path = "src/main.rs" 
 
[dependencies] 
# Async runtime 
tokio = { version = "1", features = ["full"] } 
 
# HTTP server for serving static frontend 
axum = "0.7" 
tower-http = { version = "0.5", features = ["fs", "cors"] } 
tower = "0.4" 
 
# HTTP client for health checks 
reqwest = { version = "0.12", features = ["json"] } 
 
# Serialization 
serde = { version = "1", features = ["derive"] } 
serde_json = "1" 
 
# Logging 
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
 
# Error handling 
anyhow = "1" 
thiserror = "1" 
 
# Cross-platform open browser 
open = "5" 
 
# Path utilities 
dirs = "5" 
 
[profile.release] 
opt-level = 3 
lto = true 
codegen-units = 1 
strip = true 
