[package]
name = "axeane-automation-runner"
version = "1.3.0"
edition = "2021"
description = "Axeane Kompta Automation - self-contained launcher"
authors = ["Axeane"]

[[bin]]
name = "axeane-automation"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server for serving static frontend
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Path utilities
dirs = "5"

# Native WebView2 window for the Automation Bridge (replaces Edge --app=)
wry = "0.55"
tao = { version = "0.35", features = ["rwh_06"] }

[dev-dependencies]
# Static file MIME detection — used by the `webview_frontend` example to
# serve the Next.js static export with the correct Content-Type headers.
mime_guess = "2"

# PNG decoding — used by the `webview_frontend` example to load
# `public/process.png` as the OS window icon.
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
