[package]
name = "axeane-automation-runner"
version = "1.4.0"
edition = "2021"
description = "Axeane Kompta Automation - Tauri 2 desktop host"
authors = ["Axeane"]
default-run = "axeane-automation-runner"

[[bin]]
name = "axeane-automation-runner"
path = "src/main.rs"

# Tauri 2 looks for [package.metadata.bundle] to default parts of the
# bundle configuration. We keep it minimal — tauri.conf.json is the
# source of truth.
[package.metadata.bundle]
identifier = "com.axeane.automation"
publisher   = "Axeane"
category    = "BusinessApplication"
short_description = "Axeane Kompta Automation Bridge"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Tauri 2 runtime + plugins
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# HTTP client for health checks against the sidecar
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }

# HTTP server for serving the static frontend (fallback / dev preview
# path — in production Tauri loads frontendDist directly via the
# asset protocol).
axum = "0.7"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Path utilities
dirs = "5"

# Synchronisation primitives
parking_lot = "0.12"

[dev-dependencies]
mime_guess = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
